# multi-target-tracking

./: .clangd  .gitignore  CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  README.md  ort_log.txt  pyrightconfig.json
.cache/clangd/index/: BBox.cpp.0041ECBF95E1F3DF.idx  BBox.cpp.F0E9CEAE1572E01F.idx  BBox.h.59092BEC11F80539.idx  BBox.h.7D76890BE50919CE.idx  Feature.cpp.132D4F0A2FD16640.idx  Feature.cpp.2CE4A75CB77859F7.idx  Feature.h.27B1B69C319384A4.idx  Feature.h.C5C5A84428276329.idx  FeatureExtractor.cpp.37BF4C0480F9573C.idx  FeatureExtractor.cpp.BE8672D4465EA607.idx  FeatureExtractor.h.B4F4B4E233E4E831.idx  FeatureExtractorTests.cpp.E23DCFF6976B4F5B.idx  FeatureTests.cpp.A61E8C6D8D772E72.idx  IDetector.h.993878BA1703C4E5.idx  IDetector.h.D185F4F574393F30.idx  IFeatureExtractor.h.60BFB1C5FD5253FD.idx  IFeatureExtractor.h.758E510DE83BDFA0.idx  IImageIterator.h.1F717EDB0721A509.idx  IImageIterator.h.B1CF4673D95305D8.idx  ILabeledDataIterator.h.260E9957402CA515.idx  ILabeledDataIterator.h.A14775012B87EE2B.idx  IMatcher.h.3EF9C867D077CDDC.idx  IMatcher.h.73EE97BF567CAC26.idx  LabeledData.h.470AEB23BF03DB3B.idx  LabeledData.h.58C2784BF3088B9D.idx  LabeledData.h.D30EFB65451745BF.idx  MainWindow.cpp.976BCEC053A9FDE6.idx  MainWindow.cpp.B192381D98E4B402.idx  MainWindow.h.062A2307A3DA767C.idx  MainWindow.h.44DF9534DA9157FE.idx  Matcher.cpp.198FD86DA60763AC.idx  Matcher.cpp.BBBEB5AA90F6956F.idx  Matcher.h.38B94F4757214DDF.idx  Matcher.h.BD0EC079ED2EC035.idx  MatcherTests.cpp.6C70894B22A0D424.idx  OrtEnvSingleton.cpp.09715A6ED0A7E93D.idx  OrtEnvSingleton.cpp.5A446BE01F7817C8.idx  OrtEnvSingleton.cpp.768223313F461C8F.idx  OrtEnvSingleton.h.125D8C923C56DE82.idx  OrtEnvSingleton.h.7E2D62A658F8B953.idx  (+36 more)
.github/workflows/: windows.yml
.zed/: settings.json  tasks.json
cmake/: FindWrapOpenGL.cmake
docs/: output.cs  output.csv  zed-config.md  多目标跟踪_架构设计.docx  多目标跟踪_详细设计.docx  多目标跟踪_需求分析.docx  改进方向.md
other_module/C++大作业数据处理部分/: README.txt  test_main.cpp
other_module/ImageSource/: ImageSource.cpp  ImageSource.h  main.cpp
other_module/c++_visual/: AppendixA.h  CMakeLists.txt  StatsRecorder.cpp  StatsRecorder.h  demo_visualizer.cpp  run_demo_visualizer.bat  run_demo_visualizer.ps1  test_main.cpp  test_visualizer.cpp
scripts/: convert_yolo12_to_onnx.py  export_osnet_onnx.py  fix_onnx_paths.sh  infer_onnx_image.py  osnet_onnx.py  osnet稳定性测试.py  setup_qt_env.sh  speed_test.py  speed_test.py.lprof  test.py  ubuntu_setup.sh  ui_test.py  verify_deps.sh  yolo_onnx.py  yolo_test.py
src/: main.cpp
src/config/: AppConfig.cpp  AppConfig.h  ConfigManager.cpp  ConfigManager.h  RoiConfig.h
src/core/capture/: IImageIterator.h  VideoFrameSource.cpp  VideoFrameSource.h
src/core/engine/: ILabeledDataIterator.h  TrackingEngine.cpp  TrackingEngine.h
src/core/engine/model/: OrtEnvSingleton.cpp  OrtEnvSingleton.h
src/core/engine/model/detector/: BBox.cpp  IDetector.h  YoloDetector.cpp
src/core/engine/model/feature_extractor/: Feature.cpp  FeatureExtractor.h
src/core/engine/tracker_manager/: Tracker.cpp  Tracker.h  TrackerManager.cpp  TrackerManager.h
src/core/engine/tracker_manager/matcher/: IMatcher.h  Matcher.cpp  Matcher.h
src/core/processor/: ILabeledDataIterator.h  OrtEnvSingleton.cpp  OrtEnvSingleton.h  StatsRecorder.cpp  StatsRecorder.h  TrackingEngine.cpp  TrackingEngine.h
src/core/processor/matcher/: IMatcher.h  Matcher.cpp  Matcher.h
src/core/processor/model/: OrtEnvSingleton.cpp
src/core/processor/model/detector/: BBox.cpp  BBox.h  IDetector.h  YoloDetector.cpp  YoloDetector.h
src/core/processor/model/feature_extractor/: Feature.h  FeatureExtractor.cpp  IFeatureExtractor.h
src/core/processor/structure/: TrackerInner.h
src/core/processor/tracker_manager/: Tracker.cpp  Tracker.h  TrackerManager.cpp  TrackerManager.h
src/core/recorder/: RecorderConfig.h  StatsRecorder.cpp  StatsRecorder.h
src/core/visualizer/: README.md  Visualizer.cpp  Visualizer.h
src/structure/: LabeledData.h
src/ui/: ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowController.cpp  MainWindowController.h  MainWindowView.cpp  MainWindowView.h  style.qss  ui.qrc
tests/detector/: YoloDetectorTests.cpp
tests/feature_extractor/: FeatureExtractorTests.cpp  FeatureTests.cpp
tests/matcher/: MatcherTests.cpp
tests/tracker/: TrackerManagerTests.cpp
